Wed Jul 16 12:09:41 UTC 2008  James H. Hill  <j.hill@vanderbilt.edu>

        * cuts/utils/testing/Testing_App.cpp:

	  . Updated the log messages for deploy/teardown to include the 
	    command for deploy/teardown.

Wed Jul 16 07:50:12 UTC 2008  James H. Hill  <j.hill@vanderbilt.edu>

        * bin/jbi/ExecutionManager.sh:
        * bin/jbi/NameService.sh:
        * bin/jbi/NodeManager.sh:
        * bin/jbi/PlanLauncher.sh:
        * bin/jbi/SingleProcess.sh:

          . Bug fix where the CUTS_CLASSPATH was missing the JacORB JAR
            files that are needed by the deployment framework.

        * cuts/workers/Test_Logger/CUTS/TestLogger.java:

          . Added a simple printout that tells the location of the
            CUTS.TestLogger.config used by the CUTS.TestLogger.

        * etc/SQL/CUTS-msglog.sql:

          . Bug fix where the foreign key specification for the test_number
            was using ON DELETE RESTRICT instead of ON DELETE CASCADE.

Tue Jul 15 23:36:46 UTC 2008  Hamilton Turner  <hamilton.a.turner@vanderbilt.edu>

        * utils/BMW/website/BMW.master.cs:

          . Cleared any previous error text on master page load. Fixes bug where
              error text just stays around

        * utils/BMW/website/performance.aspx.cs:
        * utils/BMW/website/unittest.aspx.cs:

          . Ensured default minimum width on all controls - even if there is no
              data


Tue Jul 15 23:17:48 UTC 2008  Hamilton Turner  <hamilton.a.turner@vanderbilt.edu>

        * utils/BMW/website/xml:
        * utils/BMW/website/xml/README.txt:

         . auto_generated.xml file was causing problems with SVN because of
             conflicts always arising in the working copy. I added it to my
             ignore list and have uploaded a readme that explains what goes in
             that directory. I will change the code soon to just automatically
             delete the auto_generated file. For now, it is useful for debug
             purposes

